# flare_pp

./: CMakeLists.txt  requirements.txt
src/: exceptions.cpp  exceptions.h  utilities.h
src/algebra/: Blacs.h  Blas.h  PMatrix.cpp  PMatrix.h  README.md  SMatrix.cpp  SMatrix.h
src/flare_pp/bffs/: parallel_sgp.cpp  parallel_sgp.h
src/mpi/: README.md  mpiController.h
tests/: CMakeLists.txt  test_parallel_sgp.cpp
